# UnfGeoSeg

./: .gitignore  README.md  TODO.md  env.sh  environment.yml  pyproject.toml
configs/: geology.yaml
process/: CMakeLists.txt  README.md  build.sh  contract.h  dt_pipeline.cpp  model_utils.py
scripts/: coarse_clf.features.json  coarse_clf.pkl  coarse_clf_origin.json  coarse_clf_origin.pkl  rf_coarse.features.json  run_all.ps1  run_all.sh  run_fine.sh
segment/: __init__.py  cli.py  config.py  io.py  process_contract.py  register.py
segment/coarse/: __init__.py  features.py  pseudolabel.py  rf_classifier.py
segment/data/: __init__.py  alignment.py  make_dataset.py  sampling.py  splits.py
segment/experiments/: __init__.py  ab_burial_depth.py  ab_tsp_perturbation.py  ab_window_size.py  e1_coarse_heldout.py  e2_tfr_finegrained.py  e3_borehole.py  e4_pseudo_vs_refined.py  e5_lambda_sensitivity.py  eval_metrics.py  fine_report.py  inference_time.py  predictions.py  records.py  report.py  training_curves.py  uncertainty.py  validation_records.py
segment/fine/: __init__.py  dataset.py  loss.py  trainer.py  transunet_wrapper.py
tests/: test_core.py
